# MEMOC_project

./: .gitignore  CMakeLists.txt  FindCPLEX.cmake  Makefile  README.md  cpxmacro.h  generate_random_coordinates.py  generate_random_distances.py  main.cpp  problem.cpp  problem.h
ant_colony/: ant_colony_solver.cpp  ant_colony_solver.h
cplex/: cplex_solver.cpp  cplex_solver.h
inputs/: input_size_100_n_1.txt  input_size_100_n_2.txt  input_size_100_n_3.txt  input_size_100_n_4.txt  input_size_100_n_5.txt  input_size_10_n_1.txt  input_size_10_n_2.txt  input_size_10_n_3.txt  input_size_10_n_4.txt  input_size_10_n_5.txt  input_size_12_n_1.txt  input_size_20_n_1.txt  input_size_20_n_2.txt  input_size_20_n_3.txt  input_size_20_n_4.txt  input_size_20_n_5.txt  input_size_25_n_1.txt  input_size_30_n_1.txt  input_size_30_n_2.txt  input_size_30_n_3.txt  input_size_30_n_4.txt  input_size_30_n_5.txt  input_size_40_n_1.txt  input_size_40_n_2.txt  input_size_40_n_3.txt  input_size_40_n_4.txt  input_size_40_n_5.txt  input_size_48_n_1.txt  input_size_50_n_1.txt  input_size_50_n_2.txt  input_size_50_n_3.txt  input_size_50_n_4.txt  input_size_50_n_5.txt  input_size_60_n_1.txt  input_size_60_n_2.txt  input_size_60_n_3.txt  input_size_60_n_4.txt  input_size_60_n_5.txt  input_size_70_n_1.txt  input_size_70_n_2.txt  (+38 more)
simulated_annealing/: simulated_annealing_solver.cpp  simulated_annealing_solver.h
